Port r51631 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51632 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -589,6 +589,9 @@ NEW FEATURES
 
     o	The PCRE library has been updated to version 8.01, a bug-fix
 	release.
+	
+    o	tools::readNEWS() now accepts a digit as the first character
+    	of a news section.
 
 
 BUG FIXES
