improvements to passing logical to .C/.Fortran
git-svn-id: https://svn.r-project.org/R/trunk@51648 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,10 @@ NEW FEATURES
 
     o	The enquote() utility, in use internally, is exported now.
 
+    o	.C and .Fortran now map non-zero return values (other than
+	NA_LOGICAL) for logical vectors to TRUE: it has been an
+	implicit assumption that they are treated as true.
+
 
 DEPRECATED & DEFUNCT
 
