--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -5677,8 +5677,8 @@ to be used to aid interfacing to existing C or FORTRAN code.
 Logical values are sent as @code{0} (@code{FALSE}), @code{1}
 (@code{TRUE}) or @code{INT_MIN = -2147483648} (@code{NA}, but only if
 @code{NAOK} is true), and the compiled code should return one of these
-three values.  (At present this is not checked, but non-zero values will
-be almost everywhere regarded as true.)
+three values.  (As from @R{} 2.12.0 non-zero values other than
+@code{INT_MIN} are mapped to @code{TRUE}.)
 
 Unless formal argument @code{NAOK} is true, all the other arguments are
 checked for missing values @code{NA} and for the @acronym{IEEE} special
