--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -2405,14 +2405,15 @@ SystemRequirements: GNU make
 
 @item
 Make use of the abilities of your compilers to check the
-standards-conformance of your code.  For example, @code{gcc} can be used
+standards-conformance of your code.  For example, @command{gcc} can be used
 with options @option{-Wall -pedantic} to alert you to potential
-problems.  Do not be tempted to assume that these are pure pedantry: for
-example @R{} is still used on platforms where the C compiler does not
-accept C++/C99 comments (starting @code{//}).  This is particularly
-important for C++, where @code{g++ -Wall -pedantic} will alert you to
-the use of GNU extensions which fail to compile on most other C++
-compilers.
+problems.  This is particularly important for C++, where @code{g++ -Wall
+-pedantic} will alert you to the use of GNU extensions which fail to
+compile on most other C++ compilers.  @R{} assumes a C99 compiler as
+from version 2.12.0, but if you want your package to be portable to
+earlier versions you should write in C90.  (In practice C99 has been
+available on most platforms since @emph{ca} 2007 but old versions of
+@command{gcc} were still in use for @R{} 2.11.x.)
 
 If you use FORTRAN, @code{ftnchek}
 (@uref{http://www.dsm.fordham.edu/~ftnchek/}) provides thorough testing
@@ -5673,7 +5674,7 @@ match as given in the table above.
 C type @code{Rcomplex} is a structure with @code{double} members
 @code{r} and @code{i} defined in the header file @file{R_ext/Complex.h}
 included by @file{R.h}.  (On most platforms which have it, this is
-compatible withe C99 @code{double complex} type.)  Only a single
+compatible with the C99 @code{double complex} type.)  Only a single
 character string can be passed to or from FORTRAN, and the success of
 this is compiler-dependent.  Other @R{} objects can be passed to
 @code{.C}, but it is better to use one of the other interfaces.  An
@@ -9645,11 +9646,11 @@ version includes the patchlevel (as in @samp{9.0}).
 @section Inlining C functions
 @findex R_INLINE
 
-The C99 keyword @code{inline} is recognized by some compilers used to
-build @R{} whereas others need @code{__inline__} or do not support
-inlining.  Portable code can be written using the macro @code{R_INLINE}
-(defined in file @file{Rconfig.h} included by @file{R.h}), as for
-example from package @pkg{cluster}
+The C99 keyword @code{inline} is recognized by most compilers used to
+build @R{} (all since @R{} 2.12.0) whereas others need @code{__inline__}
+or do not support inlining.  Portable code can be written using the
+macro @code{R_INLINE} (defined in file @file{Rconfig.h} included by
+@file{R.h}), as for example from package @pkg{cluster}
 
 @example
 #include <R.h>
