update news related to r51653
git-svn-id: https://svn.r-project.org/R/trunk@51654 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -71,6 +71,9 @@ BUG FIXES
 	calls in the same way that print(summary(.)) has done already.
 	(PR#14250)
 
+    o	Issuing POST requests to the internal web server could stall
+	the request under certain circumstances.
+
 
 
 
