--- a/NEWS
+++ b/NEWS
@@ -553,6 +553,9 @@ BUG FIXES
     o	pgamma(0,0), a boundary case, now returns 0, its limit from the
 	left, rather than the limit from the right.
 
+    o	Issuing POST requests to the internal web server could stall
+	the request under certain circumstances.
+
 
 
 
