gzcon(<textConn.>) seg.fault
git-svn-id: https://svn.r-project.org/R/trunk@51660 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -639,6 +639,9 @@ BUG FIXES
     o	Issuing POST requests to the internal web server could stall
 	the request under certain circumstances.
 
+    o	gzcon( <textConnection> ), an error, no longer damages the
+	connection (in a way to have it seg.fault). (PR#14237)
+
 
 
 
